--- a/examples/Train.ipynb
+++ b/examples/Train.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "07833783-2003-4cb1-a2b5-32beac2d65cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import json\n",
+    "import sys  \n",
+    "\n",
+    "# Put path to your project directory here:\n",
+    "sys.path.insert(1, '/Users/richy/code/midas')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "778c4454-2f16-490b-a009-9ac6080f683f",
    "metadata": {},
    "outputs": [],
@@ -23,18 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "985f06a7-0b7a-40ef-81bb-38642b6b4352",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath_1='/Users/kaihayden/Desktop/midas/first_subquery_save.json'\n",
-    "filepath_2='/Users/kaihayden/Desktop/midas/second_subquery_save.json'"
+    "filepath_1='../saved_agents/first_subquery_save.json'\n",
+    "filepath_2='../saved_agents/second_subquery_save.json'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "4830be4c-9f16-4c9f-8a78-267116d6c8a2",
    "metadata": {},
    "outputs": [],
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "c3c664b8-288b-4a69-bf07-ead423e13788",
    "metadata": {},
    "outputs": [
@@ -71,7 +75,7 @@
        "    )"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "f79f95f9-0e41-4abc-a4f5-a3d0cfd5d342",
    "metadata": {},
    "outputs": [],
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "b9b68541-b90b-4869-9f1d-cd84a31f832e",
    "metadata": {},
    "outputs": [],
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "529b3e6a-aeed-4167-976f-c2a1f5da03a9",
    "metadata": {},
    "outputs": [],
