--- a/examples/Create.ipynb
+++ b/examples/Create.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
+   "id": "8002314a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys  \n",
+    "\n",
+    "# Put path to your project directory here:\n",
+    "sys.path.insert(1, '/Users/richy/code/midas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "8ea53160-fb2f-4f03-bae1-6ce79877859f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "7feb5efc-a9a0-43d5-b568-a6989e05e77f",
    "metadata": {},
    "outputs": [],
@@ -59,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "8ab1c0e4-9b7c-4db9-86f5-b706c93a9a70",
    "metadata": {},
    "outputs": [],
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "0f6d9b0a-b07c-4483-be0f-bf44f6477a7d",
    "metadata": {},
    "outputs": [],
@@ -79,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "57aecb0f-ed2c-4d8e-a28f-6422e9099310",
    "metadata": {},
    "outputs": [],
@@ -89,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "723c6b5c-f10d-4b4c-bcce-0964ad0834c5",
    "metadata": {},
    "outputs": [],
@@ -104,27 +117,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "491a651f-4212-41df-92ce-519537772d05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_agent.save('/Users/kaihayden/Desktop/midas/first_subquery_save.json')"
+    "# new_agent.save('../saved_agents/first_subquery_save.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "958f072c-d4e7-44c0-96dd-3b9c3a84a046",
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_agent.save('/Users/kaihayden/Desktop/midas/second_subquery_save.json')"
+    "new_agent.save('../saved_agents/second_subquery_save.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "5c8de818-8a09-4056-866c-443206bc1d94",
    "metadata": {},
    "outputs": [
@@ -139,28 +152,84 @@
        "    )\n",
        "    Prompt(\n",
        "        raw=\n",
-       "For each item that the buyer agreed to purchase, return the item name, item description, quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item (quantity * (unit price - unit discount)) . Each sku of the purchased item should be treated as a separate item.\n",
+       "For each item that the buyer agreed to purchase, return the item name and item description directly under \"description\" without nesting them within another object, along with the quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item calculated as (quantity * (unit price - unit discount)). Treat each SKU of the purchased item as a separate entry under \"lineItems\". \n",
        "\n",
-       "Output the result in JSON format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
+       "Output the result in JSON format, ensuring all non-quantity and price-related details of the order and buyer are fully completed, including order number, contact phone, and shipping address. Follow the example structure below, but adjust it to directly include item name and description details under \"description\" for improved clarity and adherence to the expected output structure.\n",
        "\n",
-       "{ \"orderDetails\":{ \"orderDate\": \"\", \"orderNum\": null, }, \"buyer\":{ \"companyName\": \"\", \"pointOfContact\": \"\", \"contactEmail\": \"\", \"contactPhone\": \"\", \"shippingAddress\": \"\", }, \"lineItems\":[{ \"itemNumber\": null, \"description\": \"\", \"quantity\": null, \"unitPrice\": null, \"discount\": null, “totalPrice”: null}]}\n",
+       "{\n",
+       "  \"orderDetails\": {\n",
+       "    \"orderDate\": \"\",\n",
+       "    \"orderNum\": \"\",\n",
+       "    \"buyer\": {\n",
+       "      \"companyName\": \"\",\n",
+       "      \"pointOfContact\": \"\",\n",
+       "      \"contactEmail\": \"\",\n",
+       "      \"contactPhone\": \"\",\n",
+       "      \"shippingAddress\": \"\"\n",
+       "    },\n",
+       "    \"lineItems\": [\n",
+       "      {\n",
+       "        \"itemNumber\": \"\",\n",
+       "        \"description\": {\n",
+       "          \"itemName\": \"\",\n",
+       "          \"itemDescription\": \"\"\n",
+       "        },\n",
+       "        \"quantity\": \"\",\n",
+       "        \"unitPrice\": \"\",\n",
+       "        \"discount\": \"\",\n",
+       "        \"totalPrice\": \"\"\n",
+       "      }\n",
+       "    ]\n",
+       "  }\n",
+       "}\n",
        ",\n",
        "        mod=\n",
-       "For each item that the buyer agreed to purchase, return the item name, item description, quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item (quantity * (unit price - unit discount)) . Each sku of the purchased item should be treated as a separate item.\n",
+       "For each item that the buyer agreed to purchase, return the item name and item description directly under \"description\" without nesting them within another object, along with the quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item calculated as (quantity * (unit price - unit discount)). Treat each SKU of the purchased item as a separate entry under \"lineItems\". \n",
        "\n",
-       "Output the result in JSON format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
+       "Output the result in JSON format, ensuring all non-quantity and price-related details of the order and buyer are fully completed, including order number, contact phone, and shipping address. Follow the example structure below, but adjust it to directly include item name and description details under \"description\" for improved clarity and adherence to the expected output structure.\n",
        "\n",
-       "{ \"orderDetails\":{ \"orderDate\": \"\", \"orderNum\": null, }, \"buyer\":{ \"companyName\": \"\", \"pointOfContact\": \"\", \"contactEmail\": \"\", \"contactPhone\": \"\", \"shippingAddress\": \"\", }, \"lineItems\":[{ \"itemNumber\": null, \"description\": \"\", \"quantity\": null, \"unitPrice\": null, \"discount\": null, “totalPrice”: null}]}\n",
+       "{\n",
+       "  \"orderDetails\": {\n",
+       "    \"orderDate\": \"\",\n",
+       "    \"orderNum\": \"\",\n",
+       "    \"buyer\": {\n",
+       "      \"companyName\": \"\",\n",
+       "      \"pointOfContact\": \"\",\n",
+       "      \"contactEmail\": \"\",\n",
+       "      \"contactPhone\": \"\",\n",
+       "      \"shippingAddress\": \"\"\n",
+       "    },\n",
+       "    \"lineItems\": [\n",
+       "      {\n",
+       "        \"itemNumber\": \"\",\n",
+       "        \"description\": {\n",
+       "          \"itemName\": \"\",\n",
+       "          \"itemDescription\": \"\"\n",
+       "        },\n",
+       "        \"quantity\": \"\",\n",
+       "        \"unitPrice\": \"\",\n",
+       "        \"discount\": \"\",\n",
+       "        \"totalPrice\": \"\"\n",
+       "      }\n",
+       "    ]\n",
+       "  }\n",
+       "}\n",
        ",\n",
        "    )\n",
        "    SubQueryStruct(\n",
-       "        item_name,\n",
-       "\titem_description,\n",
+       "        item_name_and_description,\n",
        "\tquantity_purchased,\n",
        "\tunit_price_in_dollars,\n",
        "\tunit_discount_in_dollars,\n",
        "\tfinal_total_price_per_item,\n",
-       "\tsku_treatment_as_separate_item\n",
+       "\tSKU_of_purchased_item,\n",
+       "\torder_number,\n",
+       "\tcontact_phone,\n",
+       "\tshipping_address,\n",
+       "\torder_date,\n",
+       "\tbuyer_company_name,\n",
+       "\tbuyer_point_of_contact,\n",
+       "\tbuyer_contact_email\n",
        "    )\n",
        "    CriteriaStruct(\n",
        "        UserCriteria(\n",
@@ -168,20 +237,19 @@
        "\t    no_markdown\n",
        "        )\n",
        "        AgentCriteria(\n",
-       "            accuracy_of_item_details,\n",
+       "            completeness_of_order_details,\n",
+       "\t    line_items_structure,\n",
+       "\t    accuracy_of_item_details,\n",
        "\t    correct_calculation_of_total_price,\n",
-       "\t    correct_JSON_format,\n",
-       "\t    completeness_of_order_details,\n",
-       "\t    individual_treatment_of_skus,\n",
-       "\t    correctness_of_lineItems_structure,\n",
-       "\t    no_redundant_or_missing_information,\n",
-       "\t    clarity_and_readability\n",
+       "\t    presence_of_all_purchased_items,\n",
+       "\t    correct_formatting_of_prices,\n",
+       "\t    non-nesting_of_description\n",
        "        )\n",
        "    )\n",
        ")"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,30 +257,6 @@
    "source": [
     "new_agent"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33fb314e-ab38-416f-a04b-c557a38f09a9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc30f4a7-d573-4e1b-814d-6df84058e416",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a615b68c-ba3b-4f2b-a3ff-22ff2c839603",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
